Avoid listencard going wrapping to two lines
Now that we have album art on the card, the wrapping lines look quite ugly. This commit is an initial trial for more flexbox magic

--- a/listenbrainz/webserver/static/css/listens-page.less
+++ b/listenbrainz/webserver/static/css/listens-page.less
@@ -197,7 +197,7 @@
 	}
 	margin-bottom: 7px;
 	display: flex;
-	flex-wrap: wrap;
+	// flex-wrap: wrap;
 	
 	a:focus, a:hover {
 		text-decoration: underline;
@@ -256,7 +256,7 @@
 		margin-right: 1em;
 		width: @cover-art-thumbnail-size;
 		transition: width ease-out 0.4s;
-		height: @cover-art-thumbnail-size;
+		// height: @cover-art-thumbnail-size;
 		&.empty{
 			width: 0;
 		}
@@ -321,6 +321,19 @@
 		border-top: 1px solid @gray-lighter;
 		font-style: italic;
 		width: 100%;
+	}
+	.right-section{
+		flex-basis: 180px;
+		flex-wrap: wrap;
+		justify-content: flex-end;
+		align-items: center;
+		padding:0;
+		.listen-controls {
+			margin-left: initial;
+		}
+		> * {
+			display: flex;
+		}
 	}
 	
 	.listen-controls {
